<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Learn Things</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_q">New Q!</string>
    <string name="question_activity_title">Learn Things</string>
    <string name="answer">"Answer: "</string>
    <string name="title_activity_settings">Learn Things Settings</string>
    <string name="exit_button">Exit</string>

    <!-- MCActivity -->
    <string name="you_answered" formatted="false">Answered %s: %s</string>
    <string name="answer_">Answer: %s</string>
    <string name="error_malformed_answer">Error, malformed answers.</string>

    <!-- FRActivity -->
    <string name="ask_again">"Don't worry, we'll ask you again later."</string>
    <string name="yay_correct">"Excellent! You answered correctly!"</string>

    <!-- SettingsActivity -->
    <string name="questions_per_day">"Questions per day: "</string>
    <string name="reset_db">Reset DB</string>
    <string name="question_frequency">Question Frequency:</string>
    <string name="add_questions">Add Questions</string>
    <string name="question_pack_list">Active Question Pack List:</string>
    <string name="questioning_hours_text">Questioning Hours</string>
    <string name="start_time_button_text">"Start Time: "</string>
    <string name="end_time_button_text">"End Time: "</string>

    <!-- Toast Messages -->
    <string name="toast_time_till_next" formatted="false">Time until next question: %s</string>
    <string name="toast_times_per_day">Times per day: %d</string>
    <string name="light">Light</string>
    <string name="incorrect_add_question">Fill either the first answer field for a Free Response question, or all three answer fields for a multiple choice</string>
    <string name="no_question_add_question">Please provide a question</string>
    <string name="select_valid_question_pack">Please select a valid question pack.</string>
    <string name="q_pack_with_that_name_exists">Sorry, you already have a question pack with that name.</string>
    <string name="new_q_saved">Question saved to %s</string>
    <string name="making_qs_now">We are generating your questions. Please wait a moment.</string>
    <string name="finished_making_qs">Your questions have been generated. Please enjoy.</string>

    <!-- AddQuestionActivity -->
    <string name="question_text_hint">Add question text here…</string>
    <string name="question_answer_hint1">Add correct question answer here…</string>
    <string name="question_answer2_hint">Continue here for MC question…</string>
    <string name="question_answer3_hint">Once more for MC question…</string>
    <string name="save_question_button_title">Save Question</string>
    <string name="title_activity_add_question">AddQuestionActivity</string>
    <string name="title_activity_generic_question_result">GenericQuestionResultActivity</string>
    <string name="create_new_question_pack">Create a new question pack</string>
    <string name="create_question_pack_dialog_message">Specify the pack\'s name and description.</string>
    <string name="create_question_dialog_qpack_name">Question pack name</string>
    <string name="create_question_dialog_qpack_desc">Question pack desc</string>

    <!-- Menu Strings -->
    <string name="menu_edit_question_pack">Edit Question Pack</string>
    <string name="menu_edit_question">Edit Question</string>
    <string name="menu_delete_question_pack">Delete Question Pack</string>
    <string name="menu_delete_question">Delete Question</string>
    <string name="title_activity_view_question_pack">Question Packs</string>
    <string name="action_add_qpack">Add Question Pack</string>

    <!-- ViewQuestioPacksActivity -->
    <string name="view_question_packs_activity_title">View Question Packs</string>
    <string name="current_question_packs">Current Question Packs:</string>
    <string name="delete_question_pack">Delete Question Pack</string>
    <string name="view_question_pack">View / Modify Questions</string>

    <!-- ViewQuestionsActivity -->
    <string name="current_questions">Current Questions:</string>
    <string name="title_activity_win">WinActivity</string>

    <!--WinActivity-->
    <string name="win_text">You did it! Would you like reset the questions and start over, or turn off questions
        from this pack?</string>
    <string name="win_again_button">Reset Packs</string>
    <string name="win_deactivate_button">Deactivate</string>

    <!--TimePickerDialog-->
    <string name="set_start_time">Set Start Time</string>
    <string name="set_end_time">Set End Time</string>

</resources>
